fix: improve companion lifecycle management and test coverage
- Refactor companion IDM addition tracking with SetAddedToIdm() API
- Remove automatic timeout cleanup for companions not added to IDM
- Add device ID validation and message size buffer checks
- Update available device subscription to monitor companion status changes
- Add templateId to EndAddCompanionOutput for proper tracking
- Remove CFI-problematic test files (inbound/outbound_request_test)
- Re-enable message_router_test and update test initialization
- Standardize LOG_TAG to "CDA_SA" across multiple modules
- Fix clang-format formatting issues

Signed-off-by: Tianshi Liu <tianshi.liu@huawei.com>
Change-Id: Iab88b876085580aac5ceedb2c131d40528cffba4

--- a/companion_device_auth.gni
+++ b/companion_device_auth.gni
@@ -16,6 +16,7 @@ declare_args() {
   companion_device_auth_deploy_mode = "standard"
   companion_device_auth_path = "//base/useriam/companion_device_auth"
   companion_device_auth_enable_extension = false
+  companion_device_auth_enable_coverage = false
 }
 
 companion_device_auth_subsystem_name = "useriam"
