--- a/test/fuzztest/companion_device_auth_services_fuzzer/BUILD.gn
+++ b/test/fuzztest/companion_device_auth_services_fuzzer/BUILD.gn
@@ -23,7 +23,8 @@ ohos_fuzztest("CompanionDeviceAuthServiceFuzzer") {
   module_out_path = "companion_device_auth/services"
   fuzz_config_file = "../common_fuzzer_config"
 
-  cflags = companion_device_auth_fuzzer_cflags
+  cflags = companion_device_auth_fuzz_test_cflags
+  ldflags = companion_device_auth_fuzz_test_ldflags
 
   sources = companion_device_auth_service_sources_for_test +
             companion_device_auth_fake_sources + [
